litellm-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"cert-manager.io/cluster-issuer":"letsencrypt-prod","kubernetes.io/ingress.class":"nginx","nginx.ingress.kubernetes.io/ssl-redirect":"true"},"name":"litellm-ingress","namespace":"default"},"spec":{"rules":[{"http":{"paths":[{"backend":{"service":{"name":"litellm","port":{"number":4000}}},"path":"/","pathType":"Prefix"}]}}],"tls":[{"hosts":["kailashtech.duckdns.org"],"secretName":"litellm-tls-secret"}]}}
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  creationTimestamp: "2026-06-07T16:57:11Z"
  generation: 2
  name: litellm-ingress
  namespace: default
  resourceVersion: "93312"
  uid: 6d2b4f85-8d21-4384-8f91-c8e3ce3fa9c8
spec:
  rules:
  - host: kailashtech.duckdns.org 
    http:
      paths:
      - backend:
          service:
            name: litellm
            port:
              number: 4000
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - kailashtech.duckdns.org
    secretName: litellm-tls-secret
status:
  loadBalancer:
    ingress:
    - hostname: ac5f1a46464e44c12b605347f9ffcc43-b67b86bb8bac16ae.elb.ap-south-1.amazonaws.com
